# Disk-Mosaic

./: Cargo.toml  README.md
.github/workflows/: release.yml
packaging/DiskMosaic.app/Contents/: Info.plist
src/: analysis_result.rs  data.rs  disk_analyzer.rs  main.rs  settings.rs  task.rs  util.rs
src/service/storage_manager/: storage.rs
src/ui/: about_dialog.rs  data_widget.rs  mod.rs  path_bar.rs  text_ui.rs  treemap_panel.rs
src/ui/app_state/: analyzer.rs  mod.rs  result_view.rs  select_target.rs
src/ui/settings_panel/: folder_list_panel.rs  mod.rs
