[package]
name = "Disk-Mosaic"
version = "0.1.5"
edition = "2024"
build = "build.rs"
authors = ["Matthieu Casanova"]
description = "Disk Mosaic is a disk utility helping you to identify biggest folders"
homepage = "https://github.com/kpouer/Disk-Mosaic"
repository = "https://github.com/kpouer/Disk-Mosaic"
license = "MIT"
readme = "README.md"
keywords = ["desktop", "file", "folder", "disk"]
categories = ["filesystem"]

[dependencies]
egui = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
eframe = "0.33"
env_logger = "0.11"
home = "0.5.12"
humansize = "2.1.3"
log = "0.4"
egui_solarized = "0.33"
opener = { version = "0.8.4", features = ["reveal"] }
rayon = "1.11.0"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
sysinfo = "0.38"
thiserror = "2.0"
treemap = "0.3.2"
unicode-normalization = "0.1.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[package.metadata.bundle]
name = "DiskMosaic"
identifier = "com.kpouer.diskmosaic"
icon = ["packaging/DiskMosaic.app/Contents/Resources/AppIcon.icns"]
version = "0.1.4"
copyright = "Copyright (c) 2025-2026 Matthieu Casanova"
category = "Utility"
short_description = "Disk Mosaic is a disk utility helping you to identify biggest folders"
resources = [
    "assets",
    "media",
    "LICENSE",
    "README.md"
]
